# stackgame3

./: .gitignore  CMakeLists.txt  reference.txt
Game_design/: PR_Flow_v2.1.txt  stackgame_2_v1.3.txt  stackgame_2_v1.4.txt  stackgame_2_v1.5.txt  stackgame_2_v1.6.txt  stackgame_2_v1.7.txt  stackgame_2_v1.8.txt  stackgame_2_v1.9.txt  stackgame_2_v2.1.txt  stackgame_2_v2.txt  stackgame_PR_plan_v2.1.txt
src/: main.cpp
src/core/: FrameTimer.h  GameApp.cpp  GameApp.h  GameTypes.h  InputRouter.cpp  InputRouter.h  RenderLayout.cpp  RenderLayout.h  SceneManager.cpp  SceneManager.h
